--- a/AoC2022.csproj
+++ b/AoC2022.csproj
@@ -17,6 +17,9 @@
         <None Update="Inputs\02.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Inputs\03.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
