--- a/AoC2022.csproj
+++ b/AoC2022.csproj
@@ -32,6 +32,9 @@
         <None Update="Inputs\07.txt">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Inputs\08.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
